[package]
name = "ezmark"
version = "0.1.0"
authors = ["Zhou Chang <achang.zhou@gmail.com>"]
edition = "2018"

[dependencies]

clap = "2"                  # clap is used to parse and validate the string of command line arguments provided by the user at runtime. 
lazy_static = "1.1.0"       # A macro for declaring lazily evaluated statics.
yaml-rust = "0.4.3"         # Yaml parser for config.yaml
regex = "1.3"               # An implementation of regular expressions for Rust. 
chrono = "0.4"              # Date and Time for Rust

crossterm = "0.17"             # An crossplatform terminal library for manipulating terminals.
